--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASSWORD=Tambatale#2025
+MYSQL_USER=botuser
+MYSQL_PASSWORD=StrongPassword123!
 MYSQL_DATABASE=dating_bot
 
-WHATSAPP_API_TOKEN=xxxxx
-PAYNOW_ID=xxxxx
-PAYNOW_KEY=xxxxx
+WHATSAPP_API_TOKEN=your_whatsapp_token
+PAYNOW_ID=your_paynow_id
+PAYNOW_KEY=your_paynow_key
