--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,66 @@
-fastapi==0.122.0
-mysql-connector-python==8.1.0
-uvicorn==0.38.0
-requests==2.32.5
-python-dotenv==1.2.1
-
+annotated-doc==0.0.4
+annotated-types==0.7.0
 anyio==4.11.0
-httpx==0.28.1
-h11==0.16.0
-sniffio==1.3.1
-starlette==0.50.0
-
-pandas==2.3.3
-numpy==2.1.2
-python-dateutil==2.9.0.post0
-pytz==2022.1
-tzdata==2025.2
-
-spacy==3.8.11
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
-openai==2.11.0
-
-cryptography==46.0.3
-PyJWT==2.3.0
-bcrypt==3.2.0
 argon2-cffi==25.1.0
-
+argon2-cffi-bindings==25.1.0
+bcrypt==3.2.0
+blis==1.3.3
+catalogue==2.0.10
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+cloudpathlib==0.23.0
+colorama==0.4.6
+confection==0.1.5
+cryptography==46.0.3
+cymem==2.0.13
+distro==1.9.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+fastapi==0.122.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+Jinja2==3.1.6
+jiter==0.12.0
+jsonpickle==4.1.1
+MarkupSafe==3.0.3
+murmurhash==1.0.15
+mysql-connector-python==8.1.0
+numpy==2.1.2
+openai==2.11.0
+packaging==25.0
+pandas==2.3.3
+pesepay==1.0.8
+preshed==3.0.12
+protobuf==4.21.12
+pycparser==2.23
 pydantic==2.12.4
 pydantic_core==2.41.5
-
-PyYAML>=6.0
+PyJWT==2.3.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2022.1
+PyYAML==6.0.3
+requests==2.32.5
+setuptools==80.9.0
+six==1.17.0
+smart_open==7.5.0
+sniffio==1.3.1
+spacy==3.8.11
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.2
+starlette==0.50.0
+thinc==8.3.10
+tqdm==4.67.1
+typer-slim==0.20.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.6.2
+uvicorn==0.38.0
+wasabi==1.1.3
+weasel==0.4.3
+wrapt==2.0.1
